SERVER-37068 Add NumberDecimal as numeric type for aggregation expressions