jstests/aggregation/bugs/substr.js
@@ -1,6 +1,9 @@
 // Aggregation $substrBytes tests.
 
-t = db.jstests_aggregation_substr;
+(function() {
+"use strict";
+
+let t = db.jstests_aggregation_substr;
 t.drop();
 
 t.save({});
@@ -45,10 +48,11 @@ assertException('abcd', -10, 0);
 // Additional numeric types for offset / length.
 assertSubstring('bc', 'abcd', 1, 2);
 assertSubstring('bc', 'abcd', 1.0, 2.0);
-assertSubstring('bc', 'abcd', NumberInt(1), NumberInt(2));
-assertSubstring('bc', 'abcd', NumberLong(1), NumberLong(2));
-assertSubstring('bc', 'abcd', NumberInt(1), NumberLong(2));
-assertSubstring('bc', 'abcd', NumberLong(1), NumberInt(2));
+assertSubstring('bc', 'abcd', NumberInt("1"), NumberInt("2"));
+assertSubstring('bc', 'abcd', NumberLong("1"), NumberLong("2"));
+assertSubstring('bc', 'abcd', NumberInt("1"), NumberLong("2"));
+assertSubstring('bc', 'abcd', NumberLong("1"), NumberInt("2"));
+assertSubstring('bc', 'abcd', NumberDecimal("1"), NumberDecimal("2"));
 // Integer component is used.
 assertSubstring('bc', 'abcd', 1.2, 2.2);
 assertSubstring('bc', 'abcd', 1.9, 2.9);
@@ -133,3 +137,4 @@ assert.eq(
      })
         .toArray()[0]
         .a);
+}());
